infra/k8s/base/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        traefik.http.services.backend.loadbalancer.server.port: "5000"
    spec:
      containers:
        - name: backend
          image: ghcr.io/swipemytalent/backend:${GIT_COMMIT_HASH:-latest}
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: jwt
              mountPath: /run/secrets/jwt
              subPath: jwt
              readOnly: true
            - name: db-password
              mountPath: /run/secrets/db-password
              subPath: db-password
              readOnly: true
            - name: db-name
              mountPath: /run/secrets/db-name
              subPath: db-name
              readOnly: true
            - name: db-user
              mountPath: /run/secrets/db-user
              subPath: db-user
              readOnly: true
            - name: allowed-origins
              mountPath: /run/secrets/allowed-origins
              subPath: allowed-origins
              readOnly: true
      volumes:
        - name: jwt
          secret:
            secretName: jwt
        - name: db-password
          secret:
            secretName: db-password
        - name: db-name
          secret:
            secretName: db-name
        - name: db-user
          secret:
            secretName: db-user
        - name: allowed-origins
          secret:
            secretName: allowed-origins
